--- a/Godovska pecina/Godovska pecina/Godovska pecina.vcxproj.filters
+++ b/Godovska pecina/Godovska pecina/Godovska pecina.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="GameObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Snesko.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Vektor3f.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Snesko.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
