Napravljene klase za sve dosadasnje elemente

--- a/Godovska pecina/Godovska pecina/Godovska pecina.vcxproj
+++ b/Godovska pecina/Godovska pecina/Godovska pecina.vcxproj
@@ -124,14 +124,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Kamera.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Snesko.cpp" />
+    <ClCompile Include="Sunce.cpp" />
+    <ClCompile Include="Teren.cpp" />
     <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Vektor3f.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Kamera.h" />
     <ClInclude Include="Snesko.h" />
+    <ClInclude Include="Sunce.h" />
+    <ClInclude Include="Teren.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="Vektor3f.h" />
   </ItemGroup>
