--- a/Godovska pecina/Godovska pecina/Godovska pecina.vcxproj.filters
+++ b/Godovska pecina/Godovska pecina/Godovska pecina.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="Scena.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HexPiramida.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LinijeKoordinatnogSistema.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Vektor3f.h">
@@ -66,6 +72,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Scena.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HexPiramida.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LinijeKoordinatnogSistema.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
