Ubacen Cekid i jos ponesto

--- a/Godovska pecina/Godovska pecina/Godovska pecina.vcxproj
+++ b/Godovska pecina/Godovska pecina/Godovska pecina.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Cekic.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="HexPiramida.cpp" />
     <ClCompile Include="Kamera.cpp" />
@@ -139,6 +140,7 @@
     <ClCompile Include="Vektor3f.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cekic.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="HexPiramida.h" />
     <ClInclude Include="Kamera.h" />
